--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -1,85 +1,145 @@
+body {
+  background-color: #FFF8ED;
+}
+
 @font-face {
-    font-family: TTFors;
-    src: url(./font/ttfors.woff);
-  }
-  
-  @font-face {
-    font-family: TTForsBold;
-    src: url(./font/ttforsbold.woff);
-  }
+  font-family: TTFors;
+  src: url(./font/ttfors.woff);
+}
+
+@font-face {
+  font-family: TTForsBold;
+  src: url(./font/ttforsbold.woff);
+}
+
+.scrolling-banner-container {
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  padding-top: 2%;
+}
+
+@media screen and (max-width: 600px) {
   .scrolling-banner-container {
-    display: flex;
-    flex-direction: row;
-    height: 100px;
-    padding-top: 2%;
+    padding-top: 10%;
+    height: 150px;
   }
-  
-  @media screen and (max-width: 600px) {
-    .scrolling-banner-container {
-      padding-top: 10%;
-      height: 150px; 
-    }
-  }
-  
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: center;
+  grid-column-gap: 2%;
+  padding-top: 2%;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+  height: 300px;
+}
+
+@media screen and (max-width: 600px) {
   .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    justify-content: center;
-    grid-column-gap: 2%;
-    padding-top: 2%;
-    padding-bottom: 0%;
-    margin-bottom: 0%;
-    height: 275px;
+    display: flex;
+    gap: 25px;
+    flex-direction: column;
+    height: 100%;
+    padding-top: 10%;
+    
   }
-  
-  @media screen and (max-width: 600px) {
-    .grid-container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      padding-top: 10%;
-   
-    }
-  }
-  
-  .grid-image {
-    height: 35%;
-    cursor: hand;
-  }
-  
-  .text-container {
-    padding-top: 4%;
-    text-align: center;
-    padding-right: 10%;
-    padding-left: 10%;
-  }
-  
+}
+
+.grid-image {
+  height: 30%;
+  cursor: hand;
+}
+
+.grid-image {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.grid-image:hover {
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
+}
+
+.grid-image1 {
+  height: 36.5%;
+  cursor: hand;
+}
+
+.grid-image1 {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.grid-image1:hover {
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
+}
+
+.text-container {
+  padding-top: 6%;
+  text-align: center;
+  padding-right: 10%;
+  padding-left: 10%;
+}
+
+h1 {
+  font-family: TTFors;
+  font-size: 20px;
+  color: #1383cb;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+
+@media screen and (max-width: 600px) {
   h1 {
     font-family: TTFors;
-    font-size: 16px;
+    font-size: 25px;
     color: #1383cb;
     text-transform: uppercase;
     letter-spacing: 0.5px;
+
   }
-  
-  .social-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    justify-content: center;
-    grid-column-gap: 1%;
-    padding-top: 1px;
-    height: 20px;
-  }
-  
-  
+}
+
+
+.social-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: center;
+  grid-column-gap: 1%;
+  padding-top: 10px;
+  height: 20px;
+}
+
+.social-image {
+  height: 25%;
+}
+
+.social-image {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.social-image:hover {
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+
+@media screen and (max-width: 600px) {
   .social-image {
-    height: 15%;
+    padding-top: 3%;
+    height: 30%;
+    
   }
-  
-  @media screen and (max-width: 600px) {
-    .social-image {
-      height: 40%
-  
-  
-    } 
-    }
+}
