--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,24 +4,21 @@ body {
 
 @font-face {
   font-family: TTFors;
-  src: url(./font/ttfors.woff);
+  src: url(../components/font/ttfors.woff);
 }
 
-@font-face {
-  font-family: TTForsBold;
-  src: url(./font/ttforsbold.woff);
-}
 
 .scrolling-banner-container {
+  padding: 0;
   display: flex;
   flex-direction: row;
   height: 100px;
-  padding-top: 2%;
+  position: relative;
+  z-index: 0;
 }
 
 @media screen and (max-width: 600px) {
   .scrolling-banner-container {
-    padding-top: 10%;
     height: 150px;
   }
 }
@@ -89,14 +86,6 @@ body {
   padding-left: 10%;
 }
 
-h1 {
-  font-family: TTFors;
-  font-size: 20px;
-  color: #1383cb;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  animation: name duration timing-function delay iteration-count direction fill-mode;
-}
 
 
 @media screen and (max-width: 600px) {
@@ -109,8 +98,6 @@ h1 {
 
   }
 }
-
-
 .social-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
