--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -4,19 +4,18 @@ body {
   
   @font-face {
     font-family: TTFors;
-    src: url(./font/ttfors.woff);
+    src: url(../components/font/ttfors.woff);
   }
   
   @font-face {
     font-family: TTForsBold;
-    src: url(./font/ttforsbold.woff);
+    src: url(../components/font/ttforsbold.woff);
   }
   
   .scrolling-banner-container {
     display: flex;
     flex-direction: row;
     height: 100px;
-    padding-top: 5%;
   }
   
   @media screen and (max-width: 600px) {
@@ -48,36 +47,19 @@ body {
     }
   }
   
-  .grid-image {
-    height: 30%;
+  .grid-image-p {
+    height: 38%;
     cursor: hand;
   }
   
-  .grid-image {
+  .grid-image-p {
       -webkit-transform: scale(1);
       transform: scale(1);
       -webkit-transition: .3s ease-in-out;
       transition: .3s ease-in-out;
   }
   
-  .grid-image:hover {
-      -webkit-transform: scale(1.05);
-      transform: scale(1.05);
-  }
-  
-  .grid-image1 {
-    height: 36.5%;
-    cursor: hand;
-  }
-  
-  .grid-image1 {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      -webkit-transition: .3s ease-in-out;
-      transition: .3s ease-in-out;
-  }
-  
-  .grid-image1:hover {
+  .grid-image-p:hover {
       -webkit-transform: scale(1.05);
       transform: scale(1.05);
   }
@@ -110,6 +92,10 @@ body {
     }
   }
   
+  .span{
+    font: TTForsBold;
+    font-weight: 800;
+  }
   
   .social-container {
     display: grid;
@@ -145,3 +131,4 @@ body {
     }
   }
   
+ 
