--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FFF8ED;
+  background-color: #fff8ed;
 }
 
 @font-face {
@@ -7,127 +7,45 @@ body {
   src: url(../components/font/ttfors.woff);
 }
 
-
-.scrolling-banner-container {
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  height: 100px;
-  position: relative;
-  z-index: 0;
-}
-
-@media screen and (max-width: 600px) {
-  .scrolling-banner-container {
-    height: 150px;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  justify-content: center;
-  grid-column-gap: 2%;
-  padding-top: 2%;
-  padding-bottom: 0%;
-  margin-bottom: 0%;
-  height: 300px;
-}
-
-@media screen and (max-width: 600px) {
-  .grid-container {
-    display: flex;
-    gap: 25px;
-    flex-direction: column;
-    height: 100%;
-    padding-top: 10%;
-    
-  }
-}
-
-.grid-image {
-  height: 30%;
-  cursor: hand;
-}
-
-.grid-image {
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-
-.grid-image:hover {
-	-webkit-transform: scale(1.05);
-	transform: scale(1.05);
-}
-
-.grid-image1 {
-  height: 36.5%;
-  cursor: hand;
-}
-
-.grid-image1 {
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-
-.grid-image1:hover {
-	-webkit-transform: scale(1.05);
-	transform: scale(1.05);
-}
-
-.text-container {
-  padding-top: 6%;
-  text-align: center;
-  padding-right: 10%;
-  padding-left: 10%;
-}
+@import url("https://fonts.googleapis.com/css2?family=Radley:ital@0;1&display=swap");
 
 
+@media screen and (max-width: 720px) {
 
-@media screen and (max-width: 600px) {
-  h1 {
-    font-family: TTFors;
-    font-size: 25px;
-    color: #1383cb;
+  .chloe-container {
+    text-align: center;
+    padding-top: 4vh;
+    font-family: "TTFors";
+    font-size: 3rem;
+    font-weight: 500;
     text-transform: uppercase;
+    letter-spacing: 0.5px;
+    color: #1383cb;
+  }
+
+  .portfolio-container {
+    text-align: center;
+    padding-top: 1vh;
+    font-family: "Radley", serif;
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: italic;
+    color: #1383cb;
+    letter-spacing: 0.5px;
+  }
+
+  .text-container {
+    text-align: center;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    font-family: "Radley", serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-style: italic;
+    color: #1383cb;
     letter-spacing: 0.5px;
 
   }
-}
-.social-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  justify-content: center;
-  grid-column-gap: 1%;
-  padding-top: 10px;
-  height: 20px;
-}
-
-.social-image {
-  height: 25%;
-}
-
-.social-image {
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-
-.social-image:hover {
-	-webkit-transform: scale(1.2);
-	transform: scale(1.2);
-}
 
 
-@media screen and (max-width: 600px) {
-  .social-image {
-    padding-top: 3%;
-    height: 30%;
-    
-  }
 }
